[package]
name = "balance-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
dotenvy = "0.15"

sha2 = "0.10"
hex = "0.4"

mongodb = "3.0"
bson = "2.11"

thiserror = "1.0"
time = { version = "0.3", features = ["macros"] }

anyhow = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ethabi = "18"
ethereum-types = "0.14"

bs58 = "0.5"

